@@ -42,6 +42,7 @@ class BoundingBox
 		void embed (const BoundingBox &bb);
 		void embed (const DPair &p) {embed(p.x(), p.y());}
 		void embed (const DPair &c, double r);
+		void intersect (const BoundingBox &bbox);
 		double minX () const        {return ulx;}
 		double minY () const        {return uly;}
 		double maxX () const        {return lrx;}
