@@ -1,3 +1,9 @@
+dvisvgm-0.8
+- experimental evaluation of PostScript specials has been added (requires 
+  a recent version of the Ghostscript shared library libgs.so or gswin32.dll)
+- several code improvements and refactorings
+- fixed compilation bug occured when using GCC 4.4.x
+
 dvisvgm-0.7.3
 - fixed bug in font map reader that could cause a segmentation fault
 - fixed bug in creation of shorthand path drawing commands
